Major code refactoring and improved modularization of the project. None of the functionality was actually changed, but the expand, view and sequence tasks are deactivated for the current dev state.